Added Initial Comments

--- a/Assignment 1/Markup.html
+++ b/Assignment 1/Markup.html
@@ -1,3 +1,7 @@
+<!--Name: Tyirell Garraway
+  File: Markup Assignment.html
+    Date: 13 January 2024
+    Description: A university response letter-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
