--- a/Assignment 1/Markup.html
+++ b/Assignment 1/Markup.html
@@ -75,6 +75,26 @@
     <li>Second semester: <time datetime = "2017-01-15">15 January 2017</time></li>
     <li>Third semester: <time datetime = "2017-05-02">2 May 2017</time></li>
     </ul>
+
+    <p>Please let me know if this is ok, and if so which start date you would prefer.</p>
+
+
+
+
+    <p>You can find more information about <a href="http://example.com">important university dates</a> on our website.</p>
+
+
+
+
+    <h2 style = "font-size: 1.3em;">Subjects of study</h2>
+
+
+
+
+    <p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall<br>
+    somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just<br>
+    the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued<br>
+    by are as follows, in order of priority:</p>
 </body>
 </html>
 
