--- a/Assignment 1/Markup.html
+++ b/Assignment 1/Markup.html
@@ -138,6 +138,39 @@
         <dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada.
         Later on however it was discovered that they were just moving like this because they were really cold.</dd>
         </dl>
+
+
+        <p>For more of my research, see my <a href="http://example.com">exotic dance research page</a>.</p>
+
+
+
+
+
+
+
+
+    <p>Yours sincerely,</p>
+
+
+
+
+
+
+
+
+    <p>Dr Eleanor Gaye</p>
+
+
+
+
+
+
+
+
+    <p>University of Awesome motto: <q>Be awesome to each other.</q>
+-- <cite>The memoirs of Bill S Preston, <abbr title = "Esquire">Esq</abbr></cite></p>
+</body>
+</html>
         
 </body>
 </html>
