Final Commit added author name

--- a/Assignment 1/Markup.html
+++ b/Assignment 1/Markup.html
@@ -1,13 +1,13 @@
 <!--Name: Tyirell Garraway
-  File: Markup Assignment.html
-    Date: 13 January 2024
+  File: Markup.html
+    Date: 18 January 2024
     Description: A university response letter-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Dr. Eleanor Gaye">
+    <title>Markup Letter</title>
     <style>
         body {
         max-width: 800px;
