--- a/Assignment 1/Structure.html
+++ b/Assignment 1/Structure.html
@@ -1,3 +1,8 @@
+<!--Name: Tyirell Garraway
+  File: Markup Assignment.html
+    Date: 18 January 2024
+    Description: A birdwatching website
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
