--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -100,6 +100,7 @@
   <body>
     <header>
       <h1>Mozilla</h1>
+      <img src="firefox_logo-only_RGB.png" alt="Firefox logo">
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
 
@@ -108,6 +109,7 @@
     <main>
       <article>
         <!-- insert iframe from youtube -->
+        <iframe width="400px" height="250px" src="https://www.youtube.com/embed/ojcNcvb1olg" title="Choose Independent - Choose Firefox" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         <h2>Rocking the free web</h2>
 
@@ -119,16 +121,16 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img src ="firefox_logo-only_RGB.png">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="mozilla-dinosaur-head.png">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="firefox-addons.jpg">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="mdn.svg">
         </a>
         <div class="clearfix"></div>
       </div>
