--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -121,13 +121,13 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img src ="firefox_logo-only_RGB.png">
+          <img srcset ="firefox_logo-only_RGB-400.png 400w, "  alt = "The Firefox logo" >
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="mozilla-dinosaur-head.png">
+          <img src="mozilla-dinosaur-head-400.png" alt = " The Dinosaur head">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img src="firefox-addons.jpg">
+          <img src="firefox-addons-400.jpg" alt = "The firefox puzzle">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img src="mdn.svg">
