Added Comments(Final Commit)

--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -1,9 +1,13 @@
-
+<!--Name: Tyirell Garraway
+  File: index.html
+    Date: 29 January 2024
+    Description: A Mozilla Splash Page
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Mozzilla">
+    <meta name="author" content="Mozilla Page">
     <title>Mozzilla Splash Page</title>
 </head>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
