--- a/Assignment-2-part-2/blank-template.html
+++ b/Assignment-2-part-2/blank-template.html
@@ -4,7 +4,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="author" content="width=device-width">
     <title>Table template</title>
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
