Added Initial Comments

--- a/Assignment-2-part-2/blank-template.html
+++ b/Assignment-2-part-2/blank-template.html
@@ -1,4 +1,8 @@
-
+<!--Name: Tyirell Garraway
+  File: index.html
+    Date: 29 January 2024
+    Description: Planet Data Sheet
+-->
 
 <!DOCTYPE html>
 <html lang="en-US">
