--- a/Assignment-2-part-2/blank-template.html
+++ b/Assignment-2-part-2/blank-template.html
@@ -24,7 +24,7 @@
 
       <thead>
       <tr>
-        <td></td>
+        <td colspan=2></td>
         <th scope="col">Name</th>
         <th scope="col">Mass (10<sup>24</sup>kg)</th>
         <th scope="col">Diameter (km)</th>
@@ -40,8 +40,69 @@
 
       <tbody>
         <tr>
-          <td>Terrestrial planets</td>
-          <td></td>
+          <td colspan="2" rowspan="4">Terrestrial planets</td>
+          <th>Mercury</th>
+          <td>0.330</td>     
+          <td>4,879</td>
+          <td>5427</td>
+          <td>3.7</td>
+          <td>4222.6</td>
+          <td>57.9</td>
+          <td>167</td>
+          <td>0</td>
+          <td>0 Closest to the Sun</td>
+        </tr>
+        <tr>
+        <th>Venus</th>
+        <td>4.87</td>
+        <td>12,104</td>
+        <td>5243</td>
+        <td>8.9</td>
+        <td>2802.0</td>
+        <td>108.2</td>
+        <td>464</td>
+        <td>0</td>
+        </tr>
+
+        <tr>
+          <th>Earth</th>
+          <td>5.97</td>
+          <td>12,756</td>
+          <td>5514</td>
+          <td>9.8</td>
+          <td>24.0</td>
+          <td>149.6</td>
+          <td>15</td>
+          <td>1</td>
+          <td>Our world</td>
+        </tr>
+
+        <tr>
+          <th>Mars</th>
+          <td>0.642</td>
+          <td>6,792</td>
+          <td>3933</td>
+          <td>3.7</td>
+          <td>24.7</td>
+          <td>227.9</td>
+          <td>-65</td>
+          <td>2</td>
+          <td>The red planet</td>
+        </tr>
+
+        <tr>
+          <th rowspan="4">Jovian planets</th>
+          <th rowspan="2">Gas giants</th>
+          <th>Jupiter</th>
+          <td>1898</td>
+          <td>142,984</td>
+          <td>1326</td>
+          <td>23.1</td>
+          <td>9.9</td>
+          <td>778.6</td>
+          <td>-110</td>
+          <td>67</td>
+          <td>The largest planet</td>
         </tr>
       </tbody>
     </table>
