--- a/Assignment-2-part-2/blank-template.html
+++ b/Assignment-2-part-2/blank-template.html
@@ -13,7 +13,7 @@
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Planets Data</h1>
+    <h1>Planets data</h1>
     <table>
       <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</caption>
       <colgroup>
@@ -40,8 +40,8 @@
 
       <tbody>
         <tr>
-          <td colspan="2" rowspan="4">Terrestrial planets</td>
-          <th>Mercury</th>
+          <th scope="rowgroup" colspan="2" rowspan="4">Terrestrial planets</th>
+          <th scope="row">Mercury</th>
           <td>0.330</td>     
           <td>4,879</td>
           <td>5427</td>
@@ -53,7 +53,7 @@
           <td>Closest to the Sun</td>
         </tr>
         <tr>
-        <th>Venus</th>
+        <th scope="row">Venus</th>
         <td>4.87</td>
         <td>12,104</td>
         <td>5243</td>
@@ -65,7 +65,7 @@
         </tr>
 
         <tr>
-          <th>Earth</th>
+          <th scope="row">Earth</th>
           <td>5.97</td>
           <td>12,756</td>
           <td>5514</td>
@@ -78,7 +78,7 @@
         </tr>
 
         <tr>
-          <th>Mars</th>
+          <th scope="row">Mars</th>
           <td>0.642</td>
           <td>6,792</td>
           <td>3933</td>
@@ -91,9 +91,9 @@
         </tr>
 
         <tr>
-          <th rowspan="4">Jovian planets</th>
-          <th rowspan="2">Gas giants</th>
-          <th>Jupiter</th>
+          <th scope="rowgroup" rowspan="4">Jovian planets</th>
+          <th scope ="rowgroup" rowspan="2">Gas giants</th>
+          <th scope="row">Jupiter</th>
           <td>1898</td>
           <td>142,984</td>
           <td>1326</td>
@@ -106,7 +106,7 @@
         </tr>
 
         <tr>
-          <th>Saturn</th>
+          <th scope="row">Saturn</th>
           <td>568</td>
           <td>120,536</td>
           <td>687</td>
@@ -119,8 +119,8 @@
         </tr>
 
         <tr>
-          <th rowspan="2">Ice giants</th>
-          <th>Uranus</th>
+          <th scope="rowgroup" rowspan="2">Ice giants</th>
+          <th scope="row">Uranus</th>
           <td>86.8</td>
           <td>51,118</td>
           <td>1271</td>
@@ -133,7 +133,7 @@
         </tr>
 
         <tr>
-          <th>Neptune</th>
+          <th scope="row">Neptune</th>
           <td>102</td>
           <td>49,528</td>
           <td>1638</td>
@@ -146,8 +146,8 @@
         </tr>
 
         <tr>
-          <th colspan="2">Dwarf Planets</th>
-          <th>Pluto</th>
+          <th scope="row" colspan="2">Dwarf planets</th>
+          <th scope="row">Pluto</th>
           <td>0.0146</td>
           <td>2,370</td>
           <td>2095</td>
