Changed content name(Final Commit)

--- a/Assignment-2-part-2/blank-template.html
+++ b/Assignment-2-part-2/blank-template.html
@@ -8,7 +8,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="width=device-width">
+    <meta name="author" content="Planet Data Table">
     <title>Table template</title>
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
