--- a/Assignment-2-part-2/blank-template.html
+++ b/Assignment-2-part-2/blank-template.html
@@ -1,5 +1,5 @@
 <!--Name: Tyirell Garraway
-  File: index.html
+  File: blank-template.html
     Date: 29 January 2024
     Description: Planet Data Sheet
 -->
