Added comments and changed header color

--- a/Assignment-3-part-1/index.html
+++ b/Assignment-3-part-1/index.html
@@ -1,3 +1,9 @@
+
+<!-- Name: Tyirell Garraway
+File: index.html
+Date: 13 February 2024
+A very brief description of the file. -->
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,7 +20,7 @@
       }
 
       h1 {
-        color: #375e97;
+        color: hotpink;
         font-size: 2em;
         font-family: Georgia, "Times New Roman", Times, serif;
         border-bottom: 1px solid #375e97;
