--- a/Assignment-3-part-1/index.html
+++ b/Assignment-3-part-1/index.html
@@ -36,6 +36,12 @@ A very brief description of the file. -->
         font-weight: bold;
       }
 
+      ul{
+        background-color: #eeeeee;
+        border: 5px solid purple;
+        padding: 25px;
+      }
+
       a:link,
       a:visited {
         color: #fb6542;
@@ -43,6 +49,7 @@ A very brief description of the file. -->
 
       a:hover {
         text-decoration: none;
+        
       }
     </style>
   </head>
