--- a/Assignment-3-part-1/index.html
+++ b/Assignment-3-part-1/index.html
@@ -8,7 +8,7 @@ A very brief description of the file. -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="author" content="Formatting a biography" />
     <title>Formatting a biography</title>
     <style>
       body {
@@ -49,6 +49,7 @@ A very brief description of the file. -->
 
       a:hover {
         text-decoration: none;
+        color: green;
         
       }
     </style>
