--- a/Assignment-3-part-2/index.html
+++ b/Assignment-3-part-2/index.html
@@ -1,3 +1,9 @@
+<!--
+Name: Tyirell Garraway
+File: index.html
+Date: 13 February 2024
+A cool box.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
