--- a/Assignment-3-part-2/index.html
+++ b/Assignment-3-part-2/index.html
@@ -10,6 +10,7 @@ A cool box.
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Cool box</title>
+    <link rel="stylesheet" href="style.css">
     
   </head>
   <body>
