Named the document(Final Commit)

--- a/Assignment-3-part-2/index.html
+++ b/Assignment-3-part-2/index.html
@@ -8,7 +8,7 @@ A cool box.
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="author" content="A cool box">
     <title>Cool box</title>
     <link rel="stylesheet" href="style.css">
     
