Added Initial Comments

--- a/Assignment-3-part-3/index.html
+++ b/Assignment-3-part-3/index.html
@@ -1,3 +1,9 @@
+<!--
+Name: Tyirell Garraway
+File: index.html
+Date: 14 February 2024
+A Community School Homepage.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
