--- a/Assignment-3-part-3/index.html
+++ b/Assignment-3-part-3/index.html
@@ -8,7 +8,7 @@ A Community School Homepage.
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="author" content="width=device-width">
     <title>St Huxley's Community College</title>
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
