--- a/Assignment-3-part-4/index.html
+++ b/Assignment-3-part-4/index.html
@@ -1,3 +1,10 @@
+<!--
+Name: Tyirell Garraway
+File: index.html
+Date: 15 February 2024
+A fundamental layout comprehension
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
