Changed Author Name(Final Commit)

--- a/Assignment-3-part-4/index.html
+++ b/Assignment-3-part-4/index.html
@@ -9,7 +9,7 @@ A fundamental layout comprehension
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="fundamental layout">
     <title>Layout Task</title>
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
