--- a/Assignment-4-part-1/index.html
+++ b/Assignment-4-part-1/index.html
@@ -1,8 +1,13 @@
+<!--Name: Tyirell Garraway
+	File: index.html
+	Date: 03 March 2024
+	A silly story generator.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="author" content="Silly story" />
 
     <title>Silly story generator</title>
     <script src = ./main.js></script>
