--- a/Assignment-4-part-2/index.html
+++ b/Assignment-4-part-2/index.html
@@ -1,3 +1,9 @@
+<!--Name: Tyirell Garraway
+	File: index.html
+	Date: 22 March 2024
+	Image Gallery
+-->
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
