--- a/Assignment-4-part-3/index.html
+++ b/Assignment-4-part-3/index.html
@@ -20,6 +20,6 @@
     <h1>bouncing balls</h1>
     <canvas></canvas>
 
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
