--- a/Assignment-4-part-4/index.html
+++ b/Assignment-4-part-4/index.html
@@ -1,7 +1,7 @@
 <!--
-	Name: Tyirell Garraway
-	File: index.html
-	Date: 22 March 2024
+	Tyirell Garraway
+	index.html
+  22 March 2024
 	Bouncing Balls.
 	-->
 
