--- a/Assignment-4-part-4/index.html
+++ b/Assignment-4-part-4/index.html
@@ -11,7 +11,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="author" content = "Bouncing Balls">
     <title>Bouncing balls</title>
     <link rel="stylesheet" href="style.css">
   </head>
