--- a/Assignment-4-part-2/index.html
+++ b/Assignment-4-part-2/index.html
@@ -1,6 +1,6 @@
-<!--Name: Tyirell Garraway
-	File: index.html
-	Date: 22 March 2024
+<!-- Tyirell Garraway
+	index.html
+	22 March 2024
 	Image Gallery
 -->
 
