--- a/Assignment-4-part-3/index.html
+++ b/Assignment-4-part-3/index.html
@@ -1,7 +1,7 @@
 <!--
-	Name: Tyirell Garraway
-	File: index.html
-	Date: 22 March 2024
+	Tyirell Garraway
+	index.html
+	22 March 2024
 	Bouncing Balls.
 	-->
 
@@ -11,7 +11,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Bouncing balls ">
     <title>Bouncing balls</title>
     <link rel="stylesheet" href="style.css">
   </head>
