Removed the "div" in CSS and changed background color

--- a/Assignment-5/index.html
+++ b/Assignment-5/index.html
@@ -1,3 +1,8 @@
+<!-- Name: Tyirell Garraway
+	File: index.html
+	Date: 12 April 2024
+	Accessibility Troubleshooting -->
+
 <!DOCTYPE html>
 <html>
   <head>
