--- a/Assignment-5/index.html
+++ b/Assignment-5/index.html
@@ -31,7 +31,7 @@
       <li><a href="#">Blog</a></li>
     </ul>
     <form class="search">
-      <input type="search" name="q" placeholder="Search query">
+      <input type="search" name="q" placeholder="Search query" aria-label="Search through bear site">
       <input type="submit" value="Go!">
     </form>
   </nav>
@@ -124,7 +124,7 @@
 
         </aside>
         <section class="comments">
-          <div class="show-hide">Show comments</div>
+          <button class="show-hide">Show comments</button>
 
           <div class="comment-wrapper">
 
@@ -132,15 +132,15 @@
 
             <form class="comment-form">
               <div class="flex-pair">
-                Your name:
-                <input type="text" name="name" id="name" placeholder="Enter your name">
+                <label for="name">Your name:</label>
+                <input type="text" name="name" id="name" placeholder="Enter your name" aria-label="Enter your name for your comment">
               </div>
               <div class="flex-pair">
-                Your comment:
-                <input type="text" name="comment" id="comment" placeholder="Enter your comment">
+                <label for="comment">Your comment:</label>
+                <input type="text" name="comment" id="comment" placeholder="Enter your comment" aria-label="Enter your comment for this site">
               </div>
               <div>
-                <input type="submit" value="Submit comment">
+                <input type="submit" value="Submit comment" aria-label="Submit your comment">
               </div>
             </form>
 
