--- a/Assignment-5/index.html
+++ b/Assignment-5/index.html
@@ -92,11 +92,11 @@
         <p>
         Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
       </p>
-        <img src="wild-bear.jpg" alt="A picture of a wild bear">
+        <img src="wild-bear.jpg" alt="A picture of a wild bear in the water looking around for its food">
         <p>
         Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.
       </p>
-        <img src="urban-bear.jpg" alt="A picture of an urban bear">
+        <img src="urban-bear.jpg" alt="A picture of an urban bear caged in a fence">
         <p>
         Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.
       </p>
@@ -105,7 +105,7 @@
         Bears are romantic creatures by nature, and will naturally look for a mate that they can spend the rest of their lives with. They will woo a potential suitor by making their dwelling look attractive — for example with cave paintings or a bed of reeds in the case of a wild bear, and mood lighting and a Michael Bublé CD in the case of an urban bear.
       </p>
       <p>
-        The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
+        The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts. Alternatively you can access the <a href="transcript.txt">text transcript with the audio here</a>
       </p>
         <audio controls>
           <source src="media/bear.mp3" type="audio/mp3">
